Modal on mobiles fixed

--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ h2,
 h3 {
     margin: 0;
 }
+
+@media (max-width:565px) {
+    .modal {
+        top: 50px;
+    }
+}
